[metadata]
name = pre-commit-hooks
version = 0.1.0
description = Different pre-commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabian Schlüter
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options.entry_points]
console_scripts =
    branch-name-validator-hook = pre_commit_hooks.branch_name_validator_hook:main
    docstring-checker = pre_commit_hooks.docstring_checker:main
